# libusbtingo

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  USBtingoCandump.cpp  USBtingoCansend.cpp  USBtingoDetect.cpp  UtilityHelper.hpp  UtilityListener.hpp
apps/examples/: CMakeLists.txt  MinimalBasicListener.hpp  MinimalCanListener.hpp  MinimalExampleBasicBus.cpp  MinimalExampleBus.cpp  MinimalExampleLogicStream.cpp
apps/examples/MinimalExampleBasicBus/: CMakeLists.txt  MinimalBasicListener.hpp  MinimalExampleBasicBus.cpp
apps/examples/MinimalExampleBus/: CMakeLists.txt  MinimalCanListener.hpp  MinimalExampleBus.cpp
apps/examples/MinimalExampleLogicStream/: CMakeLists.txt  MinimalExampleLogicStream.cpp  MinimalLogicListener.hpp
apps/utils/: CMakeLists.txt  USBtingoCandump.cpp  USBtingoCansend.cpp  USBtingoDetect.cpp  UtilityHelper.hpp  UtilityListener.hpp
cmake/: BuildOptions.cmake  BuildSettings.cmake  CollectDependencies.cmake  Config.cmake.in  Findlibusb.cmake  PackageGeneration.cmake  ShowSummary.cmake
doc/: class_diagram.uxf  class_diagram_developer.uxf  class_diagram_simple.uxf
include/usbtingo/: usbtingo.hpp
include/usbtingo/basic_bus/: BasicBus.hpp  BasicListener.hpp  Message.hpp
include/usbtingo/bus/: Bus.hpp  CanListener.hpp  Listener.hpp  LogicListener.hpp  Status.hpp  StatusListener.hpp
include/usbtingo/can/: Can.hpp  CanListener.hpp  Dlc.hpp  Message.hpp  can.hpp
include/usbtingo/device/: Device.hpp  DeviceFactory.hpp  DeviceHelper.hpp  McanProtocol.hpp  Status.hpp  StatusListener.hpp  usbtingo_device.hpp  usbtingo_protocol.hpp
include/usbtingo/platform/: UsbtingoExport.hpp
src/: CMakeLists.txt
src/basic_bus/: BasicBus.cpp  BasicListener.cpp  Message.cpp
src/bus/: Bus.cpp  BusImpl.cpp  BusImpl.hpp  CanListener.cpp  Status.cpp
src/can/: Can.cpp  CanListener.cpp  Dlc.cpp  Message.cpp
src/device/: Device.cpp  DeviceFactory.cpp  DeviceHelper.cpp  DeviceProtocol.hpp  Status.cpp  WinDevice.cpp  WinDevice.hpp
src/device/linux/: LinuxDevice.cpp  LinuxDevice.hpp
src/device/universal/: SingletonTemplate.hpp  UniversalDevice.cpp  UniversalDevice.hpp  UniversalHandle.hpp  UsbLoader.hpp
src/device/windows/: DeviceData.hpp  WinDevice.cpp  WinDevice.hpp  WinHandle.hpp
src/usb/: UsbProtocol.hpp
test/: CMakeLists.txt
test/basic_bus/: MockBasicListener.hpp  integrationtest-BasicBus.cpp  unittest-BasicListener.cpp  unittest-Message.cpp
test/bus/: MockCanListener.hpp  MockDevice.hpp  MockListener.hpp  MockStatusListener.hpp  integrationtest-Bus.cpp  unittest-Bus.cpp  unittest-CanListener.cpp  unittest-Status.cpp  unittest-StatusListener.cpp
test/can/: DlcMap.hpp  MockCanListener.hpp  unittest-Can.cpp  unittest-CanListener.cpp  unittest-Dlc.cpp
test/device/: MockDevice.hpp  MockStatusListener.hpp  integrationtest-Device.cpp  integrationtest-DeviceFactory.cpp  unittest-Device.cpp  unittest-DeviceFactory.cpp  unittest-Status.cpp  unittest-StatusListener.cpp
tests/: CMakeLists.txt
tests/basic_bus/: MockBasicListener.hpp  integrationtest-BasicBus.cpp  unittest-BasicListener.cpp  unittest-Message.cpp
tests/bus/: MockCanListener.hpp  MockLogicListener.hpp  MockStatusListener.hpp  canfd_brs_test.cpp  integrationtest-Bus.cpp  unittest-Bus.cpp  unittest-CanListener.cpp  unittest-LogicListener.cpp  unittest-StatusListener.cpp
tests/can/: DlcMap.hpp  unittest-Dlc.cpp
tests/device/: MockDevice.hpp  integrationtest-Device.cpp  integrationtest-DeviceFactory.cpp  unittest-Device.cpp  unittest-DeviceFactory.cpp  unittest-DeviceHelper.cpp
